<resources>
    <string name="app_name">Navigation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_to_first_fragment">Go to First Fragment</string>
    <string name="go_to_second_fragment">Go to Second Fragment</string>
    <string name="go_to_third_fragment">Go to Third Fragment</string>
    <string name="inbox">Inbox</string>
    <string name="completed">Completed</string>
    <string name="description">Description</string>
    <string name="hint_task_title">Task Title</string>
    <string name="back_button">go_back</string>
    <string name="back">Back</string>
    <string name="date_amp_time"><![CDATA[Date & time]]></string>
    <string name="insert_title_task">Insert Title Task</string>
    <string name="trash_button">Trash Button</string>
</resources>